Added related blog posts to some /work projects; & more tag fixes...
- for /work projects where we have a post tag that is specific to that project, i added a loop of all those tagged posts to the project page (required conversion of page file type from md to html, and converting body text from md to html, to allow blog loop to run)
- added text-analysis tag to various posts i could find where it applied

--- a/collections/_work/collective-biographies-of-women.html
+++ b/collections/_work/collective-biographies-of-women.html
@@ -23,7 +23,8 @@ start-year: 2003
 end-year: current
 ---
 
-Alison Booth’s [Collective Biographies of Women](http://womensbios.lib.virginia.edu/about) began as a simple electronic text which, in collaboration with the Scholars’ Lab, blossomed into a rich instrument for the study of prosopography. Professor Booth has been selected as an [IATH](http://iath.virginia.edu/) and [ACLS Fellow](http://www.acls.org/research/digital.aspx?id=798) on the merit of this work.
+<p>Alison Booth’s <a href="http://womensbios.lib.virginia.edu/about">Collective Biographies of Women</a> began as a simple electronic text which, in collaboration with the Scholars’ Lab, blossomed into a rich instrument for the study of prosopography. Professor Booth has been selected as an <a href="http://iath.virginia.edu/">IATH</a> and <a href="http://www.acls.org/research/digital.aspx?id=798">ACLS Fellow</a> on the merit of this work.</p>
+
 
 <p>Below are our research blog posts related to the CBW project:</p>
 <ul>
