Finalizes /blog, /research-blog loops; adds category:update layout file...
- renames "Events" folder and top-level nav item to match Laura's GDoc (to "News/Events" title, news-events folder name)
- "News/Events" > "News Blog" goes to /blog, which displays all 3 post categories (blog, announcement, updates) and handles updates differently (given their short, author-less etc. nature)
- pages/scholarship/research.html is a research-only version of the blog (linked at /research-blog; only pulls in category: blog)
- Finalizes two example category: update files (2024-05-31-jitp-praxis-article.md and 2024-07-17-dhmakes-korean-dh-journal.md)
- removes faq, per conversation w/Laura (holding until post-launch; create a GH issue to remind us and contain the draft text)

--- a/pages/scholarship/research.html
+++ b/pages/scholarship/research.html
@@ -3,17 +3,16 @@ layout: page
 title: Research Blog
 pagination:
   enabled: true
-permalink: /blog/
+permalink: /research-blog/
 nav: true
 regenerate: true
-redirect_from:
-  - /archives
 ---
 
-<!-- need to alter to only pull in posts without announcement nor update types? or no, bc then no one sees announcements—instead, either make this a separate research blog only page for under scholarship; or keep together but use tag pills to emphasize essays (and maybe only show excerpts from essays?) -->
+<p>Our scholarly writing, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their research, teaching, and learning.</p>
 
 <!-- post layout: -->
 {% for post in site.posts limit:4 %}
+{% if post.category == "blog" %}
 	{% capture authorstring %}
 		{% include author-name.html authorid=post.author %}
 	{% endcapture %}
@@ -40,12 +39,14 @@ redirect_from:
 				<div class="date">{{ post.date | date: "%B %-d, %Y" }}</div>
 			</footer>
 	</article>
+{% endif %}
 {% endfor %} <!-- end post -->
 
 <section id="previous_posts">
 <h2>Previous Posts</h2>
 <ul class="page-previous_posts">
 {% for post in site.posts offset:4 %}
+{% if post.category != "update" %}
 	{% capture authorstring %}
 		{% include author-name.html authorid=post.author %}
 	{% endcapture %}
@@ -58,6 +59,7 @@ redirect_from:
 	{% endif %}
     <li><a href="{{ post.url }}">"{{ post.title }}"</a> by {{ authorstring | strip }}</li>
 	{% if forloop.last %}</ul>{% endif %}
+{% endif %}
 {% endfor %}
 </ul>
 
