Updates to /accessibility and /use-the-lab pages...
* Accessibility page split into sections on web accessibility (added link to DesignLab, comments on non-SLab website consultation and teaching, social media alt text use) and physical accessibility (illness precautions, mobility and distance)
* Made commented notes on /use-the-lab page on items we might include, including ones that refer to /accessibility page

--- a/pages/about/accessibility.html
+++ b/pages/about/accessibility.html
@@ -1,17 +1,17 @@
 ---
 layout: page
-title: Web Accessibility
+title: Accessibility
 nav: true
 permalink: /accessibility/
 redirect_from:
   - /about/accessibility
 ---
 
-<p>We are committed to making our projects and spaces accessible—in all meanings of that word—for everyone, regardless of ability or need. We believe accessibility is not an implementation that can be finished and done, but rather a way of thinking and working that can—and should—always be improved.</p>
-
 <p>As our Scholars&#39; Lab <a href="/charter/">charter</a> indicates, we are committed to making our projects and spaces accessible&mdash;in all meanings of that word&mdash;for everyone, regardless of ability or need. We believe accessibility is not an implementation that can be finished and done, but rather a way of thinking and working that can&mdash;and should&mdash;always be improved.</p>
 
-<p>In terms of web accessibility, we strive to make our the built environment of the Scholars&#39; Lab pleasant, easy to access, and <a href="http://www.ada.gov/">ADA-compliant</a>. Please <a href="mailto:scholarslab@virginia.edu">write to us</a> with suggestions for improvements.</p>
+<h2>Web accessibility</h2>
+<p>In terms of web accessibility, we strive to make our the built environment of the Scholars&#39; Lab website and social media pleasant, easy to access, and <a href="http://www.ada.gov/">ADA-compliant</a>.
+
 <p>For this website, we follow <a href="http://www.w3.org/WAI/WCAG20/quickref/">WCAG 2.0</a> and <a href="http://www.section508.gov/">Section 508</a> guidelines. Our markup and presentation adhere to W3G&#39;s standards for HTML5 and CSS3, and in doing so include many features meant to enhance the accessibility of our site, including:</p>
 	
 <ul>
@@ -24,8 +24,27 @@ redirect_from:
 
 <p>We use several tools to assess accessibility on our site, including the <a href="http://wave.webaim.org/">Wave evaluation tool</a> by <a href="http://webaim.org">WebAIM</a> and <a href="http://pa11y.org/">Pa11y command line interface tool</a> by <a href="https://github.com/nature">Nature Publishing Group</a>.</p>
 
+<p>We strive to follow similar practices on all our websites and when consulting and teaching about web design, aiming not for the legal minimum but for the best experience for all. For example, accessible and universal design are major components of our <a href="/praxis-program-fellowships">Praxis Program</a>'s <a href="https://designlab.jeremyboggs.net/">DesignLab</a> semester-long course, taught annually by <a href="/people/jeremy-boggs">Head of R&D Jeremy Boggs</a>.</p>
+
+<p>On our social media, we strive to always use good descriptive alt text on images.</p>
+
 <p>If you have suggestions for improvement, or encounter anything that hinders your use of the content or tool we provide, please <a href="mailto:scholarslab@virginia.edu">email us</a>.</p>
 
+<h2>Physical accessbility</h2>
+
+<h3>Illness</h3>
+<p><a href="https://uvamagazine.org/articles/uva_drops_mandates_for_vaccines_indoor_masking">UVA does not currently require in classrooms or public spaces</a>, though these recomain recommended as an effective precautionary measure against spreading COVID-19, colds, flus, and other illnesses that can range from inconvenient to disabling or worse, especially for colleagues who are immunocompromised.</p>
+
+<p>You can be contagious and not have any symptoms; home COVID tests are not 100% accurate. Please keep this in mind when we share space together. If you are feeling ill, we ask that you not attend events in our space; please <a href="mailto:scholarslab@virginia.edu">contact us</a> to request virtual consultation or event attendance options.</p>
+
+<p>We have extra masks available for attendees of events in our space who want one.</p>
+
+<h3>Mobility & distance</h3>
+<p>Directions on accessing our space from the nearest parking and elevators; gendered, gender-neutral, and family restrooms; lactation room; as well as any intervening barriers to physical access, will appear on our <a href="/use-the-lab">"Use the Lab" page</a> soon.</p>
+
+<p>Our new makerspace room (Shannon 308i) was designed with physical access in mind, and includes options like worktables that can be raised and lowered to wheelchair sitting and standing heights. Please contact <a href="/people/ammon-shepherd">Makerspace Manager Ammon Shepherd</a> if you have questions about physical makerspace access.</p>
+
+<h2>Ongoing learning & research on accessibility</h2>
 <p>Below are our research blog posts related to accessibility:</p>
 <ul>
 {%- for post in site.tags.accessibility -%}
