Lighten background colors

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -178,11 +178,11 @@ order: 3
     margin: 0 8.33% !important;
   }
   .darker-background {
-    background-color: rgb(183, 249, 255);
+    background-color: rgb(207, 251, 255);
     border-radius: 10px;
   }
   .lighter-background {
-    background-color: #eee;
+    background-color: #f2d9ff;
     border-radius: 10px;
   }
 </style>
