Broken link fixes & people.html code org...
* Organized/retabbed people.html (already wasn't displaying people for some reason; this makes it easier to track various nested if statements etc.)
* Move people updating instructions to separate page (not in nav)
* Fixes some uses of "interim" (removes from Alison's title)
* Fixes some broken links

--- a/collections/_work/neatline.html
+++ b/collections/_work/neatline.html
@@ -38,7 +38,7 @@ collaborators:
     role: Project Management & Training Specialist
   - name: Amanda Visconti
     slug: amanda-visconti
-    role: Managing Director
+    role: Director
   - name: Beth Mitchell
     slug: elizabeth-mitchell
     role: Research Assistant
