--- a/pages/about/people.html
+++ b/pages/about/people.html
@@ -13,191 +13,162 @@ nav: true
 {% assign alumni = site.people | where: 'status', 'not_current' | sort: 'last_name' %}
 
 <div class="people-wrapper">
-  <header class="people-page-header">
-    <div class="people-header__big-title">People</div>
-  </header>
+<header class="people-page-header">
+	<div class="people-header__big-title">People</div>
+</header>
 
-  <article class="people-main-content">
+<article class="people-main-content">
 
-<!-- needs styling -->
 <div>Contact the Scholars' Lab by emailing <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a>; we'll get you to the right person!</div>
 
-    <!-- staff: -->
-    <section class="people__staff">
-      <div class="people-staff__title">
-        <div></div><span>Staff</span><div></div>
-      </div>
-      <!-- staff gallery: -->
-      <div class="people-staff__gallery">
-      {% for person in directors %}
-        {% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
-        <div class="people-item-wrapper">
-          <a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
-            <div class="people-item__img">
-            {% if profile_pic == empty %}
-              <img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
-            {% else %}
-              {% for pic in profile_pic %}
-              {% if pic.path contains 'grid' %}
-                <img src="{{ pic.path }}" alt="{{ person.slug }}">
-              {% endif %}
-              {% endfor %}
-            {% endif %}
-            </div>
-            <div class="people-item__name">{{ person.title }}</div>
-            <div class="people-item__position">{{ person.position }}</div>
-          </a>
-        </div>
-        {% endfor %} <!-- end item -->
-        <!-- staff gallery item: -->
+<!-- staff, with directors at start -->
+<section class="people__staff">
+	<div class="people-staff__title">
+		<span>Staff</span>
+	</div>
+	<div class="people-staff__gallery">
+		<!-- directors at start -->
+		{% for person in directors %}
+			{% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
+				<div class="people-item-wrapper">
+					<a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
+					<div class="people-item__img">
+						{% if profile_pic == empty %}
+							<img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
+						{% else %}
+							{% for pic in profile_pic %}
+								{% if pic.path contains 'grid' %}
+									<img src="{{ pic.path }}" alt="{{ person.slug }}">
+								{% endif %}
+							{% endfor %}
+						{% endif %}
+					</div>
+					<div class="people-item__name">{{ person.title }}</div>
+					<div class="people-item__position">{{ person.position }}</div>
+					</a>
+				</div>
+		{% endfor %}
+        
+        <!-- staff other than directors -->
         {% for person in staff %}
-        {% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
-        <div class="people-item-wrapper">
-          <a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
-            <div class="people-item__img">
-            {% if profile_pic == empty %}
-              <img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
-            {% else %}
-              {% for pic in profile_pic %}
-              {% if pic.path contains 'grid' %}
-                <img src="{{ pic.path }}" alt="{{ person.slug }}">
-              {% endif %}
-              {% endfor %}
-            {% endif %}
-            </div>
-            <div class="people-item__name">{{ person.title }}</div>
-            <div class="people-item__position">{{ person.position }}</div>
-          </a>
-        </div>
-        {% endfor %} <!-- end item -->
-      </div> <!-- end gallery -->
-    </section> <!-- end staff -->
+			{% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
+				<div class="people-item-wrapper">
+					<a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
+					<div class="people-item__img">
+						{% if profile_pic == empty %}
+							<img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
+						{% else %}
+							{% for pic in profile_pic %}
+								{% if pic.path contains 'grid' %}
+									<img src="{{ pic.path }}" alt="{{ person.slug }}">
+								{% endif %}
+							{% endfor %}
+						{% endif %}
+					</div>
+					<div class="people-item__name">{{ person.title }}</div>
+					<div class="people-item__position">{{ person.position }}</div>
+					</a>
+				</div>
+        {% endfor %}
 
-    <!-- students: -->
-    <section class="people__students">
-      <div class="people-students__title"><div></div><span>Students</span><div></div></div>
-      <!-- NB: insert number of ppl; maybe color code by what we do (r&d, spatial tech, etc.) -->
-      <!-- student gallery: -->
-      <div class="people-students__gallery">
-        <!-- gallery item: -->
-        {% for person in students %}
-        {% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
-        <div class="people-item-wrapper">
-          <a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
-            <div class="people-item__img">
-            {% if profile_pic == empty %}
-              {% assign num = forloop.index | modulo:6 %}
-              {% if num == 0 %}
-              <img src="{{ site.baseurl }}/assets/img/people/grid/default-screwdrivers.jpg" alt="[Default image] Screwdrivers close-up">
-              {% elsif num == 1 %}
-              <img src="{{ site.baseurl }}/assets/img/people/grid/default-toy.jpg" alt="[Default image] Cute toy">
-              {% elsif num == 2 %}
-              <img src="{{ site.baseurl }}/assets/img/people/grid/default-clamps.jpg" alt="[Default image] Clamps close-up">
-              {% elsif num == 3 %}
-              <img src="{{ site.baseurl }}/assets/img/people/grid/default-eggs.jpg" alt="[Default image] Makerspace Eggs">
-              {% elsif num == 4 %}
-              <img src="{{ site.baseurl }}/assets/img/people/grid/default-widgets.jpg" alt="[Default image] Makerspace widgets">
-              {% elsif num == 5 %}
-              <img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
-              {% else %}
-              <img src="{{ site.baseurl }}/assets/img/people/grid/default-dino.jpg" alt="[Default image] dino close-up">
-              {% endif %}
-            {% else %}
-              {% for pic in profile_pic %}
-              {% if pic.path contains 'grid' %}
-                <img src="{{ pic.path }}" alt="{{ person.slug }}">
-              {% endif %}
-              {% endfor %}
-            {% endif %}
-            </div>
+	</div> <!-- end staff- gallery -->
+    </section> <!-- end staff section -->
+
+<!-- students: -->
+<section class="people__students">
+	<div class="people-students__title"><span>Students</span></div>
+	<div class="people-students__gallery">
+		{% for person in students %}
+			{% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
+			<div class="people-item-wrapper">
+				<a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
+				<div class="people-item__img">
+					{% if profile_pic == empty %}
+						{% assign num = forloop.index | modulo:6 %}
+							{% if num == 0 %}
+								<img src="{{ site.baseurl }}/assets/img/people/grid/default-screwdrivers.jpg" alt="[Default image] Screwdrivers close-up">
+							{% elsif num == 1 %}
+								<img src="{{ site.baseurl }}/assets/img/people/grid/default-toy.jpg" alt="[Default image] Cute toy">
+							{% elsif num == 2 %}
+								<img src="{{ site.baseurl }}/assets/img/people/grid/default-clamps.jpg" alt="[Default image] Clamps close-up">
+							{% elsif num == 3 %}
+								<img src="{{ site.baseurl }}/assets/img/people/grid/default-eggs.jpg" alt="[Default image] Makerspace Eggs">
+							{% elsif num == 4 %}
+								<img src="{{ site.baseurl }}/assets/img/people/grid/default-widgets.jpg" alt="[Default image] Makerspace widgets">
+							{% elsif num == 5 %}
+								<img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
+							{% else %}
+								<img src="{{ site.baseurl }}/assets/img/people/grid/default-dino.jpg" alt="[Default image] dino close-up">
+							{% endif %}
+					{% else %}
+						{% for pic in profile_pic %}
+							{% if pic.path contains 'grid' %}
+								<img src="{{ pic.path }}" alt="{{ person.slug }}">
+							{% endif %}
+						{% endfor %}
+					{% endif %}
+			</div>
             <div class="people-item__name">{{ person.title }}</div>
             <div class="people-item__position">
-<!-- new logic for displaying list of current & past roles, if person is current student  -->
-<ul>
-   {% for item in person.roles limit: 1 %}
-      <li>{{ item }}</li>
-   {% endfor %}
-</ul>
-            </div>
-          </a>
-        </div>
-        {% endfor %} <!-- end item -->
-      </div> <!-- end gallery -->
-    </section> <!-- end students -->
+			<!-- logic for displaying list of current & past roles, if person is current student  -->
+				<ul>
+					{% for item in person.roles limit: 1 %}
+						<li>{{ item }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+				</a>
+		</div>
+        {% endfor %}
+	</div>
+</section> <!-- end students section -->
 
 <div class="research__description">
-	<div class="research-description__text">
-    <p>We're proud of our wonderful alums! <a href="#bio-changes">Info on updating your bio</a> is available at the bottom of this page.
-    </p>
-	</div>
+<div class="research-description__text">
+<p>We're proud of our wonderful alums! If you're an alum and would like your information on our site edited or removed, please read <a href="/people-edits">these instructions</a>.</p>
+</div>
 </div>
 
-    <!-- alumni: -->
-    <section class="people__alumni">
-      <div class="people-alumni__title"><div></div><span>Alumni</span><div></div></div>
-      <!-- NB: insert number of ppl; maybe color code by what we do (r&d, spatial tech, etc.) -->
-      <!-- alumni gallery: -->
-      <div class="people-alumni__gallery">
-        <!-- gallery item: -->
-        {% for person in alumni %}
-        {% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
-        <div class="people-item-wrapper">
-          <a href="/people/{{ person.slug }}" aria-label="{{ person.title }}">
-            <!-- image: -->
-            <div class="people-item__img">
-            {% if profile_pic == empty %}
-              {% assign num = forloop.index | modulo:7 %}
-              {% if num == 0 %}
-              <img src="{{ site.baseurl }}/assets/img/people/default-screwdrivers.jpg" alt="[Default image] Screwdrivers close-up">
-              {% elsif num == 1 %}
-              <img src="{{ site.baseurl }}/assets/img/people/default-toy.jpg" alt="[Default image] Cute toy">
-              {% elsif num == 2 %}
-              <img src="{{ site.baseurl }}/assets/img/people/default-clamps.jpg" alt="[Default image] Clamps close-up">
-              {% elsif num == 3 %}
-              <img src="{{ site.baseurl }}/assets/img/people/default-eggs.jpg" alt="[Default image] Makerspace Eggs">
-              {% elsif num == 4 %}
-              <img src="{{ site.baseurl }}/assets/img/people/default-widgets.jpg" alt="[Default image] Makerspace widgets">
-              {% elsif num == 5 %}
-              <img src="{{ site.baseurl }}/assets/img/people/default-printing.jpg" alt="[Default image] Makerspace printing in process">
-              {% else %}
-              <img src="{{ site.baseurl }}/assets/img/people/default-dino.jpg" alt="[Default image] Dino close-up">
-              {% endif %}
-            {% else %}
-              {% for pic in profile_pic %}
-              {% if pic.path contains 'grid' %}
-                <img src="{{ pic.path }}" alt="{{ person.slug }}">
-              {% endif %}
-              {% endfor %}
-            {% endif %}
-            </div>
-            <!-- name: -->
-            <div class="people-item__name">{{ person.title }}</div>
-          </a>
-        </div>
-        {% endfor %} <!-- end item -->
-      </div> <!-- end gallery -->
-    </section> <!-- end alumni -->
+<!-- alumni: -->
+<section class="people__alumni">
+	<div class="people-alumni__title"><span>Alumni</span></div>
+	<div class="people-alumni__gallery">
+		{% for person in alumni %}
+			{% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
+				<div class="people-item-wrapper">
+					<a href="/people/{{ person.slug }}" aria-label="{{ person.title }}">
+		            <div class="people-item__img">
+						{% if profile_pic == empty %}
+							{% assign num = forloop.index | modulo:7 %}
+							{% if num == 0 %}
+								<img src="{{ site.baseurl }}/assets/img/people/default-screwdrivers.jpg" alt="[Default image] Screwdrivers close-up">
+							{% elsif num == 1 %}
+								<img src="{{ site.baseurl }}/assets/img/people/default-toy.jpg" alt="[Default image] Cute toy">
+							{% elsif num == 2 %}
+								<img src="{{ site.baseurl }}/assets/img/people/default-clamps.jpg" alt="[Default image] Clamps close-up">
+							{% elsif num == 3 %}
+								<img src="{{ site.baseurl }}/assets/img/people/default-eggs.jpg" alt="[Default image] Makerspace Eggs">
+							{% elsif num == 4 %}
+								<img src="{{ site.baseurl }}/assets/img/people/default-widgets.jpg" alt="[Default image] Makerspace widgets">
+							{% elsif num == 5 %}
+								<img src="{{ site.baseurl }}/assets/img/people/default-printing.jpg" alt="[Default image] Makerspace printing in process">
+							{% else %}
+								<img src="{{ site.baseurl }}/assets/img/people/default-dino.jpg" alt="[Default image] Dino close-up">
+							{% endif %}
+						{% else %}
+							{% for pic in profile_pic %}
+								{% if pic.path contains 'grid' %}
+									<img src="{{ pic.path }}" alt="{{ person.slug }}">
+								{% endif %}
+							{% endfor %}
+						{% endif %}
+					</div>
+				<div class="people-item__name">{{ person.title }}</div>
+					</a>
+				</div>
+        {% endfor %}
+	</div>
+</section> <!-- end alumni section -->
 
-<section class="people__staff">
-      <!-- section label: -->
-      <div class="people-staff__title">
-        <a id="bio-changes"></a><div></div><span>Updates</span><div></div>
-      </div>
-<div class="text-main-content">
-<p>If your pronouns, name, and/or other info on this and/or your individual bio page should be changed at any point, we’re happy to edit or remove text and/or photos—just let us know! You have a couple options for requesting this, depending on desired confidentiality (please see the "privacy alert" below if you're concerned about others noticing the change):</p>
-<ul>
-<li>Email scholarslab@virginia.edu (this will go to the inboxes of all current Scholars' Lab staff)</li>
-<li>Email any of the following indvidual staff and they’ll update the site without drawing anyone else’s attention to it: Amanda Visconti (abv6x@virginia.edu), Brandon Walsh (bmw9t@virginia.edu), Jeremy Boggs (jeremy@virginia.edu)</li>
-<li>Ask any of our current staff in person (at UVA, at a conference)</li>
-<li>Call the lab at 434-243-8800 and ask to speak to any current Scholars' Lab staff.</li>
-<li>If you're comfortable with GitHub, by making a pull request to our <a href="https://github.com/scholarslab/scholarslab.org">website repo</a></li>
-<li>Any other way you prefer to contact us. Please let us know if you have ideas for more options, or for improving this process!</li>
-</ul>
-<p>Staff will respond to any request to verify it's been received. If you don’t receive a response, that may mean we've missed your message (e.g. staff change, phone numbers change) but we've forgotten to update these directions. Emailing scholarslab@virginia.edu goes to all current SLab staff inboxes, so it will definitely reach us. If you wish to only make your bio update request to a single staffer, you may choose to just point out to scholarslab@virginia.edu that this webpage has outdated contact info, and wait for us to update the contact page before following up with one person on your specific change request.</p>
-
-<p>Privacy alert: If you wish to not draw attention to the requested change, please note that this website's GitHub repository (place storing the code underlying this website) is publicly visible, so anyone who understands GitHub could see things such as the code for earlier versions of the site and the list of changes made to the site. We’ll use something like “updated people info” as the commit message (note attached to changed website code/text explaining what was changed and why). Please also note that UVA email and other routes of contact may be monitored or shared with others for legal or technical reasons.</p>
-      </article>
-    </section>
-
-  </div>
-</div> <!-- end wrapper -->
+</div>
+</div> 
