--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -215,7 +215,7 @@ order: 3
     <div id="makerspace-hours" class="maker-hours__title">
       Open Hours and Access
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cal.lib.virginia.edu/js/hours_grid.js?002"></script>
     <div id="s-lc-whw2093"></div>
     <script>
