Ditching separate essay vs news blogs

--- a/pages/scholarship/blog.html
+++ b/pages/scholarship/blog.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: News Blog
+title: Blog
 pagination:
   enabled: true
 permalink: /blog/
@@ -10,8 +10,8 @@ redirect_from:
   - /archives
 ---
 
-<!-- need to alter to only pull in posts without announcement nor update types? or no, bc then no one sees announcements—instead, either make this a separate research blog only page for under scholarship; or keep together but use tag pills to emphasize essays (and maybe only show excerpts from essays?) -->
-<p>This page collects our most recent posts of all kinds, including announcements, quick activity update, and research essays.</p>
+<p>This page collects our most recent posts of all kinds, including announcements, quick activity update, and research essays. The research essays are our scholarly writing, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their research, teaching, and learning.</p>
+</p>
 
 <!-- post layout: -->
 {% for post in site.posts limit:4 %}
