Fixes re:3 types of posts...
* homepage has "recent blog posts" (category: blog, announcement) and "recent activity (category: update)
* /blog has all 3 category types, with slightly different styling for category:update
* fixes work items with wrong YAML for links

--- a/collections/_work/3D-chi.html
+++ b/collections/_work/3D-chi.html
@@ -7,7 +7,7 @@ collaborators:
 layout: work
 slug: 3d-chi
 title: 3D Cultural Heritage Informatics
-url: https://wordpress.its.virginia.edu/Cultural_Heritage_Data//data-2/
+link: https://wordpress.its.virginia.edu/Cultural_Heritage_Data//data-2/
 thumb-img: default-thumb.png
 banner-img: default-banner.png
 research-category: Collaborations
