--- a/collections/_work/zine-bakery.html
+++ b/collections/_work/zine-bakery.html
@@ -6,7 +6,7 @@ collaborators:
 layout: work
 slug: zine-bakery
 title: "Zine Bakery @ Scholars' Lab"
-url: https://airtable.com/shr3DDj5X1uNPUzyn/tbl88Svfsrkg3YV5Z
+link: https://airtable.com/shr3DDj5X1uNPUzyn/tbl88Svfsrkg3YV5Z
 thumb-img: default-thumb.png
 banner-img: default-banner.png
 research-category: Internal Projects and Community Service
