Styling & text fixes on /pages...
* Removed "all" from Design+Code description of the /work page, as it does not list all projects
* Commented out CSS body font-weight, as was preventing pages with <strong> text from bolding that text and didn't see bad repercussions of removing this line appear
* looked at how each /pages page displayed, fixed formatting as needed (partly done, still working but pushing so JB has latest pages for styling)

--- a/pages/consult/code-design/code-design.html
+++ b/pages/consult/code-design/code-design.html
@@ -25,7 +25,7 @@ redirect_from:
 
 	<section id="example-work">
 		<h2>Example Work and Resources</h2>
-		<p>Our <a href="/work/">Work</a> page lists all the projects Scholars' Lab staff have supported over the years. Here are a few examples:</p>
+		<p>Our <a href="/work/">Work</a> page lists projects Scholars' Lab staff have supported over the years. Here are a few examples:</p>
 		<ul>
 			<li><a href="https://digitalcollecting.lib.virginia.edu">Take Back the Archive</a></li>
 			<li><a href="https://salem.lib.virginia.edu">Salem Witch Trials Documentary Archive</a></li>
