--- a/pages/consult/spatial-technologies/spatial-technologies.html
+++ b/pages/consult/spatial-technologies/spatial-technologies.html
@@ -9,63 +9,60 @@ redirect_from:
 
 <div class="spatial-main-content">
 
-	<div class="spatial__mission"> <!-- = 'ethos' in Makerspace -->
-		<div class="spatial-mission__title">What We Do</div>
-		<!-- insert relevant links in this text: -->
-		<div class="spatial-mission__text">
-			<p>We provide training, consultations, and collaboration on the latest software, equipment, and methods, including GIS, 3D modeling, laser scanning, aerial drones, photogrammetry, virtual and augmented reality, and more.</p>
-		</div>
+<div class="spatial__mission">
+	<h2>What We Do</h2>
+	<div class="spatial-mission__text">
+		<p>We provide training, consultations, and collaboration on the latest software, equipment, and methods, including GIS, 3D modeling, laser scanning, aerial drones, photogrammetry, virtual and augmented reality, and more.</p>
 	</div>
+</div>
 
-	<div class="spatial__starting">
-		<div class="spatial-starting__title">Get in touch</div>
-		<div class="spatial-starting__how">
-			<!-- NB: merge these when add content -->
-			<ul class="spatial-starting__chi">
-				<h3>Email</h3>
-				<li><a href="mailto:spatial@virginia.edu">Email the Spatial Tech experts</a> at spatial@virginia.edu</li>
-			</ul>
-			<ul class="spatial-starting__gis">
-				<h3>GIS staff availability</h3>
-				<li>Staff: Chris Gist and Drew MacQueen</li>
-				<li>Office: Shannon Library, Room 308</li>
-		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
-				<h3>Cultural heritage informatics staff availability</h3>
-				<li>Staff: Will Rourk and Arin Bennett</li>
-				<li>Office: Shannon Library, Room 308</li>
-				<li>Hours: by appointment</li>
-			</ul>
-		</div>
-	</div>
-
-	<div class="spatial__faq">
-		<div class="spatial-faq__title">GIS</div>
-		<ul class="spatial-faq__list">
-			<ul class="spatial-starting__gis">
-			<h3>University support of GIS</h3>
-			<li>See our <a href="https://guides.lib.virginia.edu/gis">GIS Research Page</a> for all things GIS: download software, find spatial data, attend a workshop, or schedule a consultation with our staff specialists.</li>
-			<li>Our GIS resources include the <a href="http://gis.lib.virginia.edu">UVA Library Geoportal</a> and the <a href="https://geoportal.lib.virginia.edu/UVAImageDiscovery/">UVA Image Discovery Tool</a>.</li>
-			<h3>GIS workshop series</h3>
-			<li>We offer a series of friendly, jargon-free workshops each fall and spring. You can read more about upcoming and past workshops on our <a href="https://scholarslab.lib.virginia.edu/events/">events page</a>.</li>
-			</ul>
+<div class="spatial__starting">
+	<h2>Get in touch</h2>
+	<div class="spatial-starting__how">
+		<h3>Email</h3>
+		<ul class="spatial-starting__chi">
+			<li><a href="mailto:spatial@virginia.edu">Email the Spatial Tech experts</a> at spatial@virginia.edu</li>
 		</ul>
-		<div class="spatial-faq__title">Cultural Heritage Informatics</div>
-		<ul class="spatial-faq__list">
-			<ul class="spatial-starting__gis">
-			<h3>Cultural heritage informatics at UVA</h3>
-			<li>Visit our <a href="https://wordpress.its.virginia.edu/Cultural_Heritage_Data/">cultural heritage informatics</a> page to learn more about our ongoing projects; view our equipment, data, and demos; and access our 3D data repository.</li>
-			<li><a href="/cultural-heritage-informatics-documentation/">Documentation</a> for Cultural Heritage Informatics technologies and methods (funded by UVA Parents Fund)</li>
-			</ul>
+		<h3>GIS staff availability</h3>
+		<ul class="spatial-starting__gis">
+			<li>Staff: Chris Gist and Drew MacQueen</li>
+			<li>Office: Shannon Library, Room 308</li>
+		  	<li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
+		</ul>
+		<h3>Cultural heritage informatics staff availability</h3>
+		<ul>
+			<li>Staff: Will Rourk and Arin Bennett</li>
+			<li>Office: Shannon Library, Room 308</li>
+			<li>Hours: by appointment</li>
 		</ul>
 	</div>
+</div>
 
-	<div class="spatial__inventory">
-		<div class="spatial-inventory__title">Tools, Data, Equipment</div> <!-- placeholder title -->
+<div>
+	<h2>GIS</h2>
+	<h3>University support of GIS</h3>
+	<ul class="spatial-starting__gis">
+		<li>See our <a href="https://guides.lib.virginia.edu/gis">GIS Research Page</a> for all things GIS: download software, find spatial data, attend a workshop, or schedule a consultation with our staff specialists.</li>
+		<li>Our GIS resources include the <a href="http://gis.lib.virginia.edu">UVA Library Geoportal</a> and the <a href="https://geoportal.lib.virginia.edu/UVAImageDiscovery/">UVA Image Discovery Tool</a>.</li>
+	</ul>
+	<h3>GIS workshop series</h3>
+	<ul>
+		<li>We offer a series of friendly, jargon-free workshops each fall and spring. You can read more about upcoming and past workshops on our <a href="https://scholarslab.lib.virginia.edu/events/">events page</a>.</li>
+	</ul>
+	
+	<h2>Cultural Heritage Informatics</h2>
+		<h3>Cultural heritage informatics at UVA</h3>
+			<ul class="spatial-starting__gis">
+				<li>Visit our <a href="https://wordpress.its.virginia.edu/Cultural_Heritage_Data/">cultural heritage informatics</a> page to learn more about our ongoing projects; view our equipment, data, and demos; and access our 3D data repository.</li>
+				<li><a href="/cultural-heritage-informatics-documentation/">Documentation</a> for Cultural Heritage Informatics technologies and methods (funded by UVA Parents Fund)</li>
+			</ul>
+</div>
+
+<div class="spatial__inventory">
+<h2>Tools, Data, Equipment</h2>
 <p>* = by appointment/request only. ^ = not distributed</p>
 
-		<!-- copy/pasting makerspace version right now since styles already exist -->
 		<div class="maker-inventory__list">
-		  <!-- 3D Printing -->
 		  <ul class="maker-list__3d">
 			  <span><a href="https://guides.lib.virginia.edu/gis/software">GIS software & extensions</a></span>
 		    <li><a href="https://guides.lib.virginia.edu/gis/software#s-lib-ctab-20595149-1">ArcGIS Pro</a></li>
