More page formatting fixes

--- a/pages/consult/spatial-technologies/spatial-technologies.html
+++ b/pages/consult/spatial-technologies/spatial-technologies.html
@@ -144,7 +144,7 @@ redirect_from:
 </div> <!-- end inventory -->
 
 <div class="spatial__people">
-	<div class="spatial-people__title">Spatial<br/>Technologists</div>
+	<h2>Spatial Technologists</h2>
 		<ul class="spatial-people__list">
 			{% for person in site.people %}
 				{% if person.title == 'Will Rourk' or person.title == 'Arin Bennett' or person.title == 'Chris Gist' or person.title == 'Drew MacQueen' %}
