--- a/pages/about/people.html
+++ b/pages/about/people.html
@@ -5,162 +5,76 @@ permalink: /people/
 nav: true
 ---
 
-<!-- pull staff directors & staff -->
-{% assign directors = site.people | where: 'people-category', 'director' | where: 'status', 'current' | sort: 'first_name' %}
-{% assign staff = site.people | where: 'people-category', 'staff' | where: 'status', 'current' | sort: 'last_name' %}
-<!-- filter to ensure they're not in staff when printing: -->
-{% assign students = site.people | where: 'people-category', 'student' | where: 'status', 'current' | sort: 'last_name' %}
-{% assign alumni = site.people | where: 'status', 'not_current' | sort: 'last_name' %}
+<!-- Get all the people records at once.  -->
+{% assign slab_people = site.people %}
 
-<div class="people-wrapper">
-<article class="people-main-content">
-<div>To contact the Scholars' Lab, just email <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a>; we'll get you to the right person!</div>
+<!-- filter directors & staff and merge into single array -->
+{% assign directors = slab_people | where: 'people-category', 'director' | where: 'status', 'current' | sort: 'first_name' %}
+{% assign staff = slab_people | where: 'people-category', 'staff' | where:
+'status', 'current' | sort: 'last_name' %}
+{% assign slab_staff = directors | concat: staff %}
+
+<!-- filter current students -->
+{% assign students = slab_people | where: 'people-category', 'student' | where: 'status', 'current' | sort: 'last_name' %}
+
+<!-- filter alumni -->
+{% assign alumni = slab_people | where: 'status', 'not_current' | sort: 'last_name' %}
+
+<p>To contact the Scholars' Lab, just email <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a>; we'll get you to the right person!</p>
 
 <!-- staff, with directors at start -->
-<section class="people__staff">
+<section id="staff">
 	<h2>Staff</h2>
-	<div class="people-staff__gallery">
+	<div class="gallery">
 		<!-- directors at start -->
-		{% for person in directors %}
+		{% for person in slab_staff %}
 			{% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
-				<div class="people-item-wrapper">
-					<a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
-					<div class="people-item__img">
-						{% if profile_pic == empty %}
-							<img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
-						{% else %}
-							{% for pic in profile_pic %}
-								{% if pic.path contains 'grid' %}
-									<img src="{{ pic.path }}" alt="{{ person.slug }}">
-								{% endif %}
-							{% endfor %}
-						{% endif %}
-					</div>
-					<div class="people-item__name">{{ person.title }}</div>
-					<div class="people-item__position">{{ person.position }}</div>
-					</a>
-				</div>
+			<a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
+			{% if profile_pic == empty %}
+				<img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="">
+			{% else %}
+				{% for pic in profile_pic %}
+					{% if pic.path contains 'grid' %}
+				<img src="{{ pic.path }}" alt="">
+					{% endif %}
+				{% endfor %}
+			{% endif %}
+				<p class="person-name">{{ person.title }}</p>
+				<p class="person-role">{{ person.position }}</p>
+			</a>
 		{% endfor %}
-        
-        <!-- staff other than directors -->
-        {% for person in staff %}
-			{% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
-				<div class="people-item-wrapper">
-					<a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
-					<div class="people-item__img">
-						{% if profile_pic == empty %}
-							<img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
-						{% else %}
-							{% for pic in profile_pic %}
-								{% if pic.path contains 'grid' %}
-									<img src="{{ pic.path }}" alt="{{ person.slug }}">
-								{% endif %}
-							{% endfor %}
-						{% endif %}
-					</div>
-					<div class="people-item__name">{{ person.title }}</div>
-					<div class="people-item__position">{{ person.position }}</div>
-					</a>
-				</div>
-        {% endfor %}
-
 	</div> <!-- end staff- gallery -->
-    </section> <!-- end staff section -->
+</section> <!-- end staff section -->
 
 <!-- students: -->
-<section class="people__students">
+<section id="students">
 	<h2>Students</h2>
-	<div class="people-students__gallery">
+	<div class="gallery">
 		{% for person in students %}
 			{% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
-			<div class="people-item-wrapper">
-				<a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
-				<div class="people-item__img">
-					{% if profile_pic == empty %}
-						{% assign num = forloop.index | modulo:6 %}
-							{% if num == 0 %}
-								<img src="{{ site.baseurl }}/assets/img/people/grid/default-screwdrivers.jpg" alt="[Default image] Screwdrivers close-up">
-							{% elsif num == 1 %}
-								<img src="{{ site.baseurl }}/assets/img/people/grid/default-toy.jpg" alt="[Default image] Cute toy">
-							{% elsif num == 2 %}
-								<img src="{{ site.baseurl }}/assets/img/people/grid/default-clamps.jpg" alt="[Default image] Clamps close-up">
-							{% elsif num == 3 %}
-								<img src="{{ site.baseurl }}/assets/img/people/grid/default-eggs.jpg" alt="[Default image] Makerspace Eggs">
-							{% elsif num == 4 %}
-								<img src="{{ site.baseurl }}/assets/img/people/grid/default-widgets.jpg" alt="[Default image] Makerspace widgets">
-							{% elsif num == 5 %}
-								<img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
-							{% else %}
-								<img src="{{ site.baseurl }}/assets/img/people/grid/default-dino.jpg" alt="[Default image] dino close-up">
-							{% endif %}
+		<a href="/people/{{ person.slug }}/">
+			{% if profile_pic == empty %}
+			<img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="">
 					{% else %}
 						{% for pic in profile_pic %}
 							{% if pic.path contains 'grid' %}
-								<img src="{{ pic.path }}" alt="{{ person.slug }}">
+								<img src="{{ pic.path }}" alt="">
 							{% endif %}
 						{% endfor %}
 					{% endif %}
-			</div>
-            <div class="people-item__name">{{ person.title }}</div>
-            <div class="people-item__position">
-			<!-- logic for displaying list of current & past roles, if person is current student  -->
-				<ul>
-					{% for item in person.roles limit: 1 %}
-						<li>{{ item }}</li>
-					{% endfor %}
-				</ul>
-			</div>
-				</a>
-		</div>
+            <p class="person-name">{{ person.title }}</p>
+            <p class="person-role">{% for item in person.roles limit: 1 %}{{ item }}{% endfor %}</p>
+		</a>
         {% endfor %}
 	</div>
 </section> <!-- end students section -->
 
-<!-- alumni: -->
-<section class="people__alumni">
-
+<section id="alumni">
 	<h2>Alumni</h2>
-	<div>
-		<p>We're proud of our wonderful alums! If you're an alum and would like your information on our site edited or removed, please read <a href="/people-edits">these instructions</a>.</p>
-	</div>
-	
-	<div class="people-alumni__gallery">
-		{% for person in alumni %}
-			{% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
-				<div class="people-item-wrapper">
-					<a href="/people/{{ person.slug }}" aria-label="{{ person.title }}">
-		            <div class="people-item__img">
-						{% if profile_pic == empty %}
-							{% assign num = forloop.index | modulo:7 %}
-							{% if num == 0 %}
-								<img src="{{ site.baseurl }}/assets/img/people/default-screwdrivers.jpg" alt="[Default image] Screwdrivers close-up">
-							{% elsif num == 1 %}
-								<img src="{{ site.baseurl }}/assets/img/people/default-toy.jpg" alt="[Default image] Cute toy">
-							{% elsif num == 2 %}
-								<img src="{{ site.baseurl }}/assets/img/people/default-clamps.jpg" alt="[Default image] Clamps close-up">
-							{% elsif num == 3 %}
-								<img src="{{ site.baseurl }}/assets/img/people/default-eggs.jpg" alt="[Default image] Makerspace Eggs">
-							{% elsif num == 4 %}
-								<img src="{{ site.baseurl }}/assets/img/people/default-widgets.jpg" alt="[Default image] Makerspace widgets">
-							{% elsif num == 5 %}
-								<img src="{{ site.baseurl }}/assets/img/people/default-printing.jpg" alt="[Default image] Makerspace printing in process">
-							{% else %}
-								<img src="{{ site.baseurl }}/assets/img/people/default-dino.jpg" alt="[Default image] Dino close-up">
-							{% endif %}
-						{% else %}
-							{% for pic in profile_pic %}
-								{% if pic.path contains 'grid' %}
-									<img src="{{ pic.path }}" alt="{{ person.slug }}">
-								{% endif %}
-							{% endfor %}
-						{% endif %}
-					</div>
-				<div class="people-item__name">{{ person.title }}</div>
-					</a>
-				</div>
-        {% endfor %}
-	</div>
-</section> <!-- end alumni section -->
-
-</div>
-</div> 
+	<p>We're proud of our wonderful alums! If you're an alum and would like your information on our site edited or removed, please read <a href="/people-edits">these instructions</a>.</p>
+	<ul>
+{% for person in alumni %}
+		<li><a href="/people/{{ person.slug }}" aria-label="{{ person.title }}">{{ person.title }}</a></li>
+{% endfor %}
+	</ul>
+</section>
