--- a/pages/scholarship/blog.html
+++ b/pages/scholarship/blog.html
@@ -25,7 +25,7 @@ redirect_from:
 		{% if post.category != "update" %}
 			<h2><a href="{{ site.baseurl }}{{ post.url }}" aria-label="{{ post.title }}" title="{{ post.title }}">{{ post.title | replace: ' - ', ': ' }}</a></h2>
 		{% else %}
-			<h2>Lab Activity Update: {{ post.title }}</h2>				
+			<h2>{{ post.date | date: "%B %-d, %Y" }} update: {{ post.title }}</h2>				
 		{% endif %}
 	</hgroup></header>
 	<div class="content">
@@ -71,7 +71,7 @@ redirect_from:
 	{% if post.category != "update" %}
 		<li><a href="{{ post.url }}">"{{ post.title }}"</a> by {{ authorstring | strip }}</li>
 	{% else %}
-		<li><a href="{{ post.url }}">Lab Activity Update: {{ post.title }}</a></li>	
+		<li><a href="{{ post.url }}">{{ post.date | date: "%B %-d, %Y" }} update: {{ post.title }}</a></li>	
 	{% endif %}
 	{% if forloop.last %}
 		</ul>
